<resources>
    <string name="app_name">SS31</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solar_data">Solar Data</string>
    <string name="crop_prediction">Fasal Prediction</string>
    <string name="soil_health">Soil Health</string>
    <string name="fasal_mandi">Fasal Mandi</string>
    <string name="fertilizer_calc">Fertilizer Calculator</string>
    <string name="weather_advisory">Weather Advisory</string>
    <string name="useful_info">Useful Information</string>
    <string name="fasal_kyc">Fasal KYC(Know Your Crop)</string>
    <string name="fasal_management">Fasal Management</string>
    <string name="fasal_gyan">Fasal Gyaan</string>
    <string name="fasal_name">Fasal Name</string>
    <string name="fasal_type">Fasal Type</string>
    <string name="soil_type">Soil Type:  (Clay, Loam, Sandy)</string>
    <string name="soil_pH">Soil pH level</string>
    <string name="fasal_desc">Fasal Description</string>
    <string name="soil_nutrient">Soil Nutrient Used</string>
    <string name="nitrogen">Nitrogen(N)</string>
    <string name="phosphorus">Phospho(P)</string>
    <string name="sulphur">Sulphur(S)</string>
    <string name="manganese">Manganese(Mn)</string>
    <string name="potassium">Potassium(K)</string>
    <string name="copper">Copper (Cu)</string>
    <string name="submit">SUBMIT</string>
    <string name="fasal_predicted">Fasal Predicted</string>
    <string name="fertilizer_test">Select Fasal to get Fertilizer Test</string>
    <string name="tomato">Tomatoes</string>
    <string name="wheat">Wheats</string>
    <string name="rice">Rice</string>
    <string name="notification">Notifications</string>
    <string name="general">General</string>
    <string name="govt">Government</string>
    <string name="fasal_activity">Fasal Activity</string>
    <string name="fertlizer_calc">Fertilizer Calc</string>
    <string name="crop_care">Fasal Care</string>
    <string name="crop_adv">Fasal Advisory</string>
    <string name="select_crop">Select Crop</string>
    <string name="add_edit_NPK_values">Add/Edit NPK Values</string>
    <string name="plot_size">Plot Size (Acres)</string>
    <string name="calculate">Calculate</string>
    <string name="results">Results</string>
    <string name="user_name">Kisan Raj</string>
    <string name="mssg1">Hello my name is Kisaan Sahayak, how may I help you?</string>
    <string name="mssg2">Can you help me knowing about organic farming?</string>
    <string name="mssg3">Sure!</string>
    <string name="mssg4">Organic Farming is a type of farming which consumes 0 percentage of chemicals</string>
    <string name="mssg5">Great</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="rainfall">Rainfall</string>
    <string name="opt_solar">Opt Solar:</string>
    <string name="join">Join Now</string>
</resources>