<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg">

    <TextView
        android:id="@+id/crop_prediction_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fasal_predicted"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/choose_crop_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fertilizer_test"
        android:fontFamily="@font/oxygen"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <GridLayout
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:rowCount="3"
        android:columnCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/tomato_fertilizer_calc"
            android:layout_width="100dp"
            android:layout_height="80dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="#FBCFDE"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="2dp"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:src="@drawable/tomato"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tomato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tomato"
                    android:fontFamily="@font/oxygen"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/wheat_fertilizer_calc"
            android:layout_width="100dp"
            android:layout_height="80dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="#F4E1C5"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="2dp"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:src="@drawable/wheat"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wheat"
                    android:fontFamily="@font/oxygen"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/rice_fertilizer_calc"
            android:layout_width="100dp"
            android:layout_height="80dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="#C6FDF8"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="2dp"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:src="@drawable/rice"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rice"
                    android:fontFamily="@font/oxygen"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </GridLayout>

</LinearLayout>